2008-08-17  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>

 * Extended UI by display filter selection and batch button.
 * Moved keybiard information from ModelSpecific class to BankFile. Added
   default file extension.
 * The save dialog (bank files) now gives a hint about the needed file
   extension. (In form of a wild-card like *.reg or *.rgt)
 * Intrdocued AboutTab class in order to shrink MainWindow class a bit.
 * The "Keyboard Information" tab now shows some technical data derived from
   the BankFile classes, too.
 * Moved all message texts to const.msg for enhancing reusability.
 * Added clear button for import list
 * Added smart disabling of invalid buttons (for extended user guidance)


2008-08-16  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>

 * Introduced a common base-class for all exceptions of all packages.
 * Extended bankfile.ModelSpecific by user documentation
 * New classmethod bankfile.ModelSpecific.getAllSubclasses. Uses a re-modeled
   ClassFinder which now returns a list instead of one value.
 * Using the new getAllSubclasses method in order to build the keyboard list
   for new registration out of actually existing classes instead of a
   pre-definied list.
 * Extended pre-defined list of keyboard models in turn.
 * Added descriptive information about supported keyboard models and finished
   the keyboard information page to display them.


2008-08-15  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>

 * Revamped UI layout. Instead of aligning buttons bellow lists they now
   reside next to the list they belong to. The window now always opens
   maximized. In total this makes for a more aesthetical and consistent look.
 * When opening a registration bank for import the status message now
   contains the file name instead of a generic success message.
 * Version 0.2 now comes with acknowledgements on the "About" pane.
 * File dialogs now change the processe's working directory when resolved.