@@ -1,3 +1,8 @@
+2008-08-18  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>
+
+ * Finished display filter for available registrations.
+
+
 2008-08-17  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>
 
  * Extended UI by display filter selection and batch button.
